Limited Hair editing (no grab, scale, rotate) #62551

Closed
opened 2019-03-13 17:05:49 +01:00 by Everton Schneider · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
version: 2.80 (sub 48), branch: master, commit date: 2019-03-13 12:50, hash: ffa29194bb, type: Release
build date: 13/03/2019, 06:45

Short description of error
Can't grab, scale or rotate selected strands.

Exact steps for others to reproduce the error
Open attached blend file and try to move, rotate or scale selected strands, you can select other strands and try the same and nothing happens...HairEditing_Limited.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** version: 2.80 (sub 48), branch: master, commit date: 2019-03-13 12:50, hash: ffa29194bbe7, type: Release build date: 13/03/2019, 06:45 **Short description of error** Can't grab, scale or rotate selected strands. **Exact steps for others to reproduce the error** Open attached blend file and try to move, rotate or scale selected strands, you can select other strands and try the same and nothing happens...[HairEditing_Limited.blend](https://archive.blender.org/developer/F6815176/HairEditing_Limited.blend)

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-03-13 19:46:33 +01:00

It does actually transform the particle strands, but the viewport is not updating. Happens with a new file too.

It seems as if there's a missing update here.

It does actually transform the particle strands, but the viewport is not updating. Happens with a new file too. It seems as if there's a missing update here.

This issue was referenced by bf8a414237

This issue was referenced by bf8a414237f90f8a014b942f8dcaac3a679bda6a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62551
No description provided.