Fix T62551: Limited Hair editing (no grab, scale, rotate)

This is actually re-introduced T59963 which got broken by 6752022310b.
Use less obscure recalc flag now.