source/blender/editors/physics/particle_edit.c
@@ -4320,7 +4320,7 @@ static void brush_edit_apply(bContext *C, wmOperator *op, PointerRNA *itemptr)
 		if (edit->psys) {
 			WM_event_add_notifier(C, NC_OBJECT | ND_PARTICLE | NA_EDITED, ob);
 			BKE_particle_batch_cache_dirty_tag(edit->psys, BKE_PARTICLE_BATCH_DIRTY_ALL);
-			DEG_id_tag_update(&ob->id, ID_RECALC_SELECT);
+			DEG_id_tag_update(&ob->id, ID_RECALC_PSYS_REDO);
 		}
 		else {
 			DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY);
@@ -4589,7 +4589,7 @@ static int shape_cut_exec(bContext *C, wmOperator *UNUSED(op))
 		if (edit->psys) {
 			WM_event_add_notifier(C, NC_OBJECT | ND_PARTICLE | NA_EDITED, ob);
 			BKE_particle_batch_cache_dirty_tag(edit->psys, BKE_PARTICLE_BATCH_DIRTY_ALL);
-			DEG_id_tag_update(&ob->id, ID_RECALC_SELECT);
+			DEG_id_tag_update(&ob->id, ID_RECALC_PSYS_REDO);
 		}
 		else {
 			DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY);
